--- a/App/RepresentApp/mobile/src/main/res/values/strings.xml
+++ b/App/RepresentApp/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_display_message">DisplayMessageActivity</string>
     <string name="title_activity_display_current">CURRENT LOCATION</string>
+    <string name="google_api_id">27844934</string>
 </resources>
